# super-stt-mistral

./: Cargo.toml  README.md  backend.toml  justfile
.github/workflows/: ci.yml  release.yml
src/: component.rs  lib.rs
src/component/: realtime.rs
tests/: live_mistral.rs  protocol.rs  realtime_round_trip.rs  transcribe_round_trip.rs
tests/common/: mod.rs
wit/: realtime.wit
