# SPDX-License-Identifier: GPL-3.0-only
# Standalone Mistral realtime WASM backend. Depends only on third-party crates —
# no super-stt code. Its own workspace root, with its own Cargo.lock.
#
# The library is a `wit-bindgen` component (cdylib) built for wasm32-wasip2; the
# `rlib` target lets the host integration tests link/run alongside the wasmtime
# harness that loads the prebuilt component.
[package]
    name = "super-stt-backend-mistral"
    version = "0.1.0"
    edition = "2024"
    license = "GPL-3.0-only"
    publish = false

# Own workspace root — never absorbed into a parent workspace.
[workspace]

[lib]
    crate-type = ["cdylib", "rlib"]

[dependencies]
    base64 = "0.22"
    serde_json = "1.0.150"
    wit-bindgen = "0.46"

[dev-dependencies]
anyhow = "1"
bytes = "1"
futures = "0.3"
hound = "3.5"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
wasmtime = { version = "45", features = ["async"] }
wasmtime-wasi = "45"
wasmtime-wasi-http = "45"
wiremock = "0.6.5"
